--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>黎桂辛的简历</title>
- <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-<script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+ <link href="boots/css/bootstrap.min.css" rel="stylesheet">
+    <script src="boots/jquery-3.2.1.min.js"></script>
+    <script src="boots/js/bootstrap.min.js"></script>
     <style type="text/css">
 
         .biaoti{
