改写了html的内容

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>黎桂辛的简历</title>
- <link href="boots/css/bootstrap.min.css" rel="stylesheet">
-    <script src="boots/jquery-3.2.1.min.js"></script>
-    <script src="boots/js/bootstrap.min.js"></script>
+ <link href="bootstrap.min.css" rel="stylesheet">
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <style type="text/css">
 
         .biaoti{
