--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>黎桂辛的简历</title>
- <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <script src="jquery-3.2.1.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <style type="text/css">
@@ -11,6 +11,7 @@
         .biaoti{
             font-size: 18px;
             font-weight: bold;
+            text-shadow: #3c3c3c 2px 2px 1px;
         }
         .neirong{
             font-size: 14px;
@@ -24,7 +25,9 @@
             }
         }
         @media (min-width: 992px) {
-
+            .border{
+                border-right:1px solid black;
+            }
             .biaoti{
                 font-size: 35px;
             }
@@ -50,6 +53,9 @@
             }
         }
         @media (min-width: 1200px) {
+            .border{
+                border-right:1px solid black;
+            }
             .neirong{
                 font-size: 18px;
             }
@@ -89,7 +95,7 @@
     </div>
     <div class="col-md-4 col-xs-12 zuonei" style="text-align: center" >
         <div class="col-md-12 " >
-        <h3>个人信息</h3>
+        <h3><span class="glyphicon glyphicon-paperclip"></span> 个人信息</h3>
             <div  class="neirong" style="margin-left: 15px">
             <p>  姓 名：黎桂辛</p>
             <p>  性 别：男</p>
@@ -100,7 +106,7 @@
             <hr style="background-color: darkgrey;height: 1px;border: none">
         </div>
         <div class="col-md-12 ">
-            <h3>联系方式</h3>
+            <h3><span class="glyphicon glyphicon-earphone"></span> 联系方式</h3>
             <div class="neirong" style="margin-left: 15px">
                 <p style="font-weight: bold">  电 话：18575770927</p>
                 <p>  微 信：13558429712</p>
@@ -109,7 +115,7 @@
             <hr style="background-color: darkgrey;height: 1px;border: none">
         </div>
         <div class="col-md-12">
-            <h3>通信地址</h3>
+            <h3><span class="glyphicon glyphicon-home"></span> 通信地址</h3>
             <div class="neirong" style="margin-left: 15px">
                 <p> 深圳龙岗区禾坪路</p>
             </div>
@@ -130,18 +136,25 @@
             <div class="neirong">
                 <P><b>熟悉：html5,css3,javascrip,jQuery,bootstrap</b></P>
                 <P>会用：ps，flash</P>
-                <P>其他：java，</P>
+                <P>其他：java，c++,<b>git</b>管理代码</P>
             </div>
         </div>
         <div class="col-md-12"style="text-align: center;">
             <span  class="biaoti" style="border: 1px solid saddlebrown;margin-top: 5px;">工作经历</span>
-            <div class="neirong">
-                <P><b>广州触动科技有限公司</b></P>
-                <P>2015.10-2017.12</P>
-                <P>手机游戏前端开发</P>
-                <P>主要负责游戏界面的实现，功能的实现，逻辑的实现以及人机交互的实现</P>
+            <div class="col-md-12">
+                <div class="col-md-6 neirong border">
+                    <P><b>广州触动科技有限公司</b></P>
+                    <P>2015.10-2016.11</P>
+                    <P>手机游戏前端开发</P>
+                    <P>主要负责游戏界面的实现，功能的实现，逻辑的实现以及人机交互的实现</P>
+                </div>
+                <div class="col-md-6 neirong">
+                    <P><b>容桂顺的网络有限公司</b></P>
+                    <P>2017.02-2017.05</P>
+                    <P>web前端开发助理</P>
+                    <P>主要负责静态页面的实现，效果的实现，还有帮助处理一些图片</P>
+                </div>
             </div>
-
         </div>
     </div>
     <div class="col-md-12 col-xs-12">
