--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="col-md-12" style="text-align: center;">
             <div class="col-md-12"><span  class="biaoti" style="border: 1px solid saddlebrown;margin-top: 5px;">专业技能</span></div>
             <div class="col-md-4">
-                <div style="width: 180px;height: 250px;border: 5px solid white" id="dong1">
+                <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong1">
                     <h1 style="margin-top: 100px;position: relative">HTML</h1>
                     <div style="position: relative;display: none">
                         <p>熟练HTML/XHTML标记语言</p>
@@ -159,7 +159,7 @@
                 </div>
             <div class="col-md-4">
 
-                    <div style="width: 180px;height: 250px;border: 5px solid white" id="dong2">
+                    <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong2">
                         <h1 style="margin-top: 100px;position: relative">CSS</h1>
                         <div style="position: relative;display: none">
                             <p>熟练运用css及css新特性</p>
@@ -171,7 +171,7 @@
             </div>
             <div class="col-md-4">
 
-                    <div style="width: 180px;height: 250px;border: 5px solid white" id="dong3">
+                    <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong3">
                         <h1 style="margin-top: 100px;position: relative">SKILL</h1>
                         <div style="position: relative;display: none">
                             <p>熟练javascrip,对js面向对象编程的思想有一定的了解</p>
@@ -195,7 +195,7 @@
 
                 </div>
                 <div class="col-md-6 neirong">
-                    <div id="gongzuojingli" style="position: relative;border: 2px solid black;width: 250px;height: 200px;margin: 0px auto">
+                    <div id="gongzuojingli" style="position: relative;border: 2px solid black;width: 250px;height: auto;margin: 0px auto">
                       <div id="gz1" style="position: absolute;">
                           <P>广州触动科技有限公司</P>
                           <P>2015.10-2016.11</P>
