--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
         <div class="col-md-12" style="text-align: center;">
             <div class="col-md-12"><span  class="biaoti" style="border: 1px solid saddlebrown;margin-top: 5px;">专业技能</span></div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-4">
                 <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong1">
                     <h1 style="margin-top: 100px;position: relative">HTML</h1>
                     <div style="position: relative;display: none">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-4">
 
                     <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong2">
                         <h1 style="margin-top: 100px;position: relative">CSS</h1>
@@ -169,7 +169,7 @@
                     </div>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-4">
 
                     <div style="width: 180px;height: 250px;border: 5px solid #696969" id="dong3">
                         <h1 style="margin-top: 100px;position: relative">SKILL</h1>
