--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <script src="com.js"></script>
 </head>
 <body>
-<div class="container" style="background-color: peru;height: 100%;padding: 0px">
+<div class="container" style="background-color: peru;padding: 0px">
     <div  class="col-md-4 col-xs-12 fist" style="margin: 0px;font-size: 40px;margin-top: 20px;">
 <div id="geren" style="background-color: black;text-align:center;vertical-align:middle;color: peru;height: 150px;line-height: 150px">
     黎桂辛
